# Turbo-Rank

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json
deploy/: CMakeLists.txt  Makefile  README.md  infer.cpp  infer_trt.cpp  server.py
deploy/docker/: entrypoint.sh  trt.Dockerfile
deploy/scripts/: build.sh  build_dockers.sh
docker/: ort.Dockerfile  trt.Dockerfile
notebooks/: 01_data_exploration.ipynb  02_export_and_inference.ipynb  baseline.ipynb  data-1.ipynb  datasets_ingestion.ipynb  inference-1.ipynb
scripts/: convert_mind_to_parquet.py  preinitialize_optuna_schema.sh  prepare_data_in_cache.py  rebuild_nrms_cache.py  rebuild_nrms_cache_spark.py  release_gpu_memory.sh  run_precommit.sh  start.sh  start_DDP.sh  start_mlflow_server.sh  tmux.sh  unzip_all_mind.py  update_package.sh  watch_infra.sh
server/: README.md  build_docker.sh
server/docker/: triton.dockerfile
server/models/onnx/: config.pbtxt
tests/: test_data.py
turbo_rank/: dataset.py
turbo_rank/cli/: test.sh  train_nrms.py  train_nrms_ddp.py  train_two_tower.py  tune_nrms_optuna.py
turbo_rank/config/: paths.py
turbo_rank/data/: encoders.py  preprocess.py  preprocess_spark.py
turbo_rank/datasets/: nrms.py  two_tower.py
turbo_rank/engine/: ddp_train_loop.py  registry.py  train_loop.py
turbo_rank/modeling/: train_baseline.py
turbo_rank/models/: nrms.py  two_tower.py
