[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "turbo_rank"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Yihan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["turbo_rank"]
include = ["pyproject.toml", "turbo_rank/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["turbo_rank"]
force-sort-within-sections = true

